--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MH Planner</title>
   </head>
